--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongodb": "^6.5.0"
+    "mongodb": "^6.5.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
